--- a/Road to Recovery/pages/VolunteerDetails.html
+++ b/Road to Recovery/pages/VolunteerDetails.html
@@ -281,7 +281,7 @@
                     <h4 class="page-title">פרטי המתנדב.ת&nbsp&nbsp<i class="md md-recent-actors"></i></h4>
                     <h5>המידע יישמר לשימושה של העמותה בלבד.</h5>
                     <h5>נא לבדוק את הפרטים ולהשלים את החסר. בסיום – להקליק על מקש שמירה (בתחתית הדף).</h5><br />
-                    <h5>בכל שאלה או בעיה במילוי הטופס ניתן לפנות לגלית עזר סלע: <a href="mailto:galit-as@bezeqint.net">galit-as@bezeqint.net</a>&nbsp;&nbsp;050-4850577</h5>
+                    <h5>בכל שאלה או בעיה במילוי הטופס ניתן לפנות ליעל נוי: <a href="mailto:yael.noy@gmail.com">yael.noy@gmail.com</a>&nbsp;&nbsp;054-7792875</h5>
                 </div>
             </div>
         </div>
