--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -1440,7 +1440,7 @@
                     let editBtn;
                     let deleteBtn;
                     let btnStr = '';
-                    let lastModified = convertDBDate2FrontEndDate(arr_rides[i].LastModified).toLocaleString('he-IL', { dateStyle: "short", timeStyle: "short" });
+               //     let lastModified = convertDBDate2FrontEndDate(arr_rides[i].LastModified).toLocaleString('he-IL', { dateStyle: "short", timeStyle: "short" });
                     let numOfRealEscorts = 0; //not anonymous
                     let driverColumnContent = '';
                     let englishStatus = '';
