--- a/Road to Recovery/pages/menu.html
+++ b/Road to Recovery/pages/menu.html
@@ -10,7 +10,7 @@
                         <i>
                             <img src="../../Media/הסעות להיום.png" height="25" width="25" />
                         </i>
-                        <span>ניהול ההסעות שלי</span>
+                        <span>ניהול ההסעות </span>
                     </a>
                 </li>
 
@@ -59,7 +59,7 @@
                         <i>
                             <img src="../../Media/יומן מערכת.png" height="25" width="25" />
                         </i>
-                        <span data-toggle="tooltip" title="Reports" data-placement="left">דוחות</span>
+                        <span data-toggle="tooltip" title="Reports" data-placement="left">דו"חות</span>
                     </a>
 
                 </li>
