--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" href="assets/images/favicon_1.ico">
 
-    <title>ניהול ההסעות שלי</title>
+    <title>ניהול ההסעות </title>
     <!--GENERAL object and additional functions-->
     <script src="lib/lz-string.js"></script>
     <script src="lib/master.js"></script>
@@ -2158,7 +2158,7 @@
                         <div class="col-sm-2">
                             <div class="page-title-box">
                                 <h4 class="page-title">
-                                    ניהול ההסעות שלי&nbsp&nbsp&nbsp<i data-toggle="tooltip" title="My Rides تنسيق السفريات الخاصة بي">
+                                    ניהול ההסעות &nbsp&nbsp&nbsp<i data-toggle="tooltip" title="My Rides تنسيق السفريات الخاصة بي">
                                         <img src="../../Media/הסעות להיום.png" height="25" width="25" />
                                     </i>
                                 </h4>
@@ -2496,7 +2496,8 @@
         </div>
     </div>
     <div class="ContextMenu_dropdown hidden">
-        <button onclick="add2IhaveSeenAllready()" class="dropbtn">הסר סימון מתא זה</button>
+        להסיר סימון עודכן לאחרונה מתא זה?
+            <input onclick="add2IhaveSeenAllready()" class="dropbtn" type="button" value="כן" />
     </div>
 </body>
 </html>
